--- a/core/footer.html
+++ b/core/footer.html
@@ -6,6 +6,6 @@
 	democritus.i.dependencies = #{dependencies};
 	democritus.i.patternName = "#{patternName}";
 </script>
-<script src="/styleguide/js/lib.js"></script>
+<script src="/styleguide/modules/navigation/js/scripts.js"></script>
 
 <aside id="democritus"></aside>
