update menu to off-canvas

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 				reverseDependencies: [],
 				patternName: "",
 				assetsPath: "",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
