--- a/public/patterns/atoms-forms-textarea/index.html
+++ b/public/patterns/atoms-forms-textarea/index.html
@@ -20,8 +20,8 @@
 	
 	<!-- /NEUTRON HEADER -->
 </head>
-<body class="atoms-forms-button">
-	<button type="submit" class="btn ">Submit</button>
+<body class="atoms-forms-textarea">
+	<textarea name="" id="" cols="30" rows="10"></textarea>
 
 
 	<!-- NEUTRON FOOTER -->
@@ -29,8 +29,8 @@
 		window.neutronADT = {
 			i: {
 				dependencies: [],
-				reverseDependencies: [{"partial":"molecules/forms/search-bar","path":"molecules-forms-search-bar/index.html"}],
-				patternName: "atoms/forms/button",
+				reverseDependencies: [],
+				patternName: "atoms/forms/textarea",
 				assetsPath: "../../",
 				menuBehavior: "off-canvas",
 				cssTheme: "default",
