--- a/public/patterns/atoms-media-image/index.html
+++ b/public/patterns/atoms-media-image/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"molecules/blocks/media","path":"molecules-blocks-media/index.html"},{"partial":"molecules/blocks/thumbnail","path":"molecules-blocks-thumbnail/index.html"}],
 				patternName: "atoms/media/image",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
