--- a/public/patterns/atoms-text-headline/index.html
+++ b/public/patterns/atoms-text-headline/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"molecules/blocks/media","path":"molecules-blocks-media/index.html"},{"partial":"molecules/blocks/thumbnail","path":"molecules-blocks-thumbnail/index.html"},{"partial":"organisms/blocks/media-box","path":"organisms-blocks-media-box/index.html"},{"partial":"organisms/highlights/jumbotron","path":"organisms-highlights-jumbotron/index.html"},{"partial":"templates/ajax","path":"templates-ajax/index.html"},{"partial":"templates/article","path":"templates-article/index.html"}],
 				patternName: "atoms/text/headline",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
