--- a/public/patterns/atoms-text-paragraph/index.html
+++ b/public/patterns/atoms-text-paragraph/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"organisms/highlights/jumbotron","path":"organisms-highlights-jumbotron/index.html"}],
 				patternName: "atoms/text/paragraph",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
