--- a/public/patterns/molecules-blocks-media/index.html
+++ b/public/patterns/molecules-blocks-media/index.html
@@ -48,7 +48,7 @@
 				reverseDependencies: [{"partial":"organisms/blocks/media-box","path":"organisms-blocks-media-box/index.html"}],
 				patternName: "molecules/blocks/media",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
