--- a/public/patterns/molecules-blocks-thumbnail/index.html
+++ b/public/patterns/molecules-blocks-thumbnail/index.html
@@ -108,7 +108,7 @@
 				reverseDependencies: [{"partial":"templates/home","path":"templates-home/index.html"}],
 				patternName: "molecules/blocks/thumbnail",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
