--- a/public/patterns/molecules-forms-search-bar/index.html
+++ b/public/patterns/molecules-forms-search-bar/index.html
@@ -46,7 +46,7 @@
 				reverseDependencies: [{"partial":"organisms/navigation/main-navbar","path":"organisms-navigation-main-navbar/index.html"}],
 				patternName: "molecules/forms/search-bar",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
