--- a/public/patterns/molecules-links-breadcrumb-item/index.html
+++ b/public/patterns/molecules-links-breadcrumb-item/index.html
@@ -34,7 +34,7 @@
 				reverseDependencies: [{"partial":"organisms/navigation/breadcrumb","path":"organisms-navigation-breadcrumb/index.html"}],
 				patternName: "molecules/links/breadcrumb-item",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
