--- a/public/patterns/molecules-navigation-menu-items/index.html
+++ b/public/patterns/molecules-navigation-menu-items/index.html
@@ -61,7 +61,7 @@
 				reverseDependencies: [{"partial":"organisms/navigation/main-navbar","path":"organisms-navigation-main-navbar/index.html"}],
 				patternName: "molecules/navigation/menu-items",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
