--- a/public/patterns/molecules-navigation-toggle-button/index.html
+++ b/public/patterns/molecules-navigation-toggle-button/index.html
@@ -37,7 +37,7 @@
 				reverseDependencies: [{"partial":"organisms/navigation/main-navbar","path":"organisms-navigation-main-navbar/index.html"}],
 				patternName: "molecules/navigation/toggle-button",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
