--- a/public/patterns/organisms-blocks-media-box/index.html
+++ b/public/patterns/organisms-blocks-media-box/index.html
@@ -62,7 +62,7 @@
 				reverseDependencies: [{"partial":"templates/home","path":"templates-home/index.html"}],
 				patternName: "organisms/blocks/media-box",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
