--- a/public/patterns/organisms-highlights-jumbotron/index.html
+++ b/public/patterns/organisms-highlights-jumbotron/index.html
@@ -51,7 +51,7 @@
 				reverseDependencies: [{"partial":"templates/home","path":"templates-home/index.html"}],
 				patternName: "organisms/highlights/jumbotron",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
