--- a/public/patterns/organisms-navigation-breadcrumb/index.html
+++ b/public/patterns/organisms-navigation-breadcrumb/index.html
@@ -54,7 +54,7 @@
 				reverseDependencies: [{"partial":"templates/article","path":"templates-article/index.html"}],
 				patternName: "organisms/navigation/breadcrumb",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
