--- a/public/patterns/organisms-navigation-footer/index.html
+++ b/public/patterns/organisms-navigation-footer/index.html
@@ -40,7 +40,7 @@
 				reverseDependencies: [{"partial":"templates/article","path":"templates-article/index.html"},{"partial":"templates/home","path":"templates-home/index.html"}],
 				patternName: "organisms/navigation/footer",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
