--- a/public/patterns/pages-article/index.html
+++ b/public/patterns/pages-article/index.html
@@ -179,7 +179,7 @@
 				reverseDependencies: [],
 				patternName: "pages/article",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
