--- a/public/patterns/pages-home/index.html
+++ b/public/patterns/pages-home/index.html
@@ -477,7 +477,7 @@
 				reverseDependencies: [],
 				patternName: "pages/home",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
