--- a/public/patterns/pages-server-response/index.html
+++ b/public/patterns/pages-server-response/index.html
@@ -29,7 +29,7 @@
 				reverseDependencies: [],
 				patternName: "pages/server/response",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
