--- a/public/patterns/templates-ajax/index.html
+++ b/public/patterns/templates-ajax/index.html
@@ -33,7 +33,7 @@
 				reverseDependencies: [{"partial":"pages/server/response","path":"pages-server-response/index.html"}],
 				patternName: "templates/ajax",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
