--- a/public/patterns/templates-article/index.html
+++ b/public/patterns/templates-article/index.html
@@ -176,7 +176,7 @@
 				reverseDependencies: [{"partial":"pages/article","path":"pages-article/index.html"}],
 				patternName: "templates/article",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
