--- a/public/patterns/templates-home/index.html
+++ b/public/patterns/templates-home/index.html
@@ -388,7 +388,7 @@
 				reverseDependencies: [{"partial":"pages/home","path":"pages-home/index.html"}],
 				patternName: "templates/home",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
