--- a/public/patterns/atoms-forms-input/index.html
+++ b/public/patterns/atoms-forms-input/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"molecules/forms/search-bar","path":"molecules-forms-search-bar/index.html"}],
 				patternName: "atoms/forms/input",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
