--- a/public/patterns/atoms-links-brand/index.html
+++ b/public/patterns/atoms-links-brand/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"organisms/navigation/main-navbar","path":"organisms-navigation-main-navbar/index.html"}],
 				patternName: "atoms/links/brand",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
