--- a/public/patterns/atoms-text-link/index.html
+++ b/public/patterns/atoms-text-link/index.html
@@ -32,7 +32,7 @@
 				reverseDependencies: [{"partial":"molecules/blocks/thumbnail","path":"molecules-blocks-thumbnail/index.html"},{"partial":"organisms/highlights/jumbotron","path":"organisms-highlights-jumbotron/index.html"}],
 				patternName: "atoms/text/link",
 				assetsPath: "../../",
-				menuBehavior: "default",
+				menuBehavior: "off-canvas",
 				cssTheme: "default",
 				language: "en"
 			}
